V.NEXT
----------
- [PATCH] Fix Error Type thrown for NO_ACCOUNT_FOUND (#2006)

V.11.0.0
----------
- [MINOR] Add CommandDispatcher methods to stop and reset silent request executor. (#2000)
- [MINOR] Support CIAM Authority Type (#1992)
- [PATCH] Send AT on KEY_AUTHTOKEN for ADAL Acquire token silently with Broker (#1996)
- [PATCH] Expose Cached Credential Service request ID in tokenResponse (#1991)
- [MINOR] Adding YubiKit remove method back in; bumping YubiKit Versions (#1994)
- [PATCH] Make changes for jetpack datastore broker support (#1986)
- [PATCH] Getting rid of account manager strategy in MSAL/OneAuth (#1988)
- [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)
- [MAJOR] Some improvements to Open Id Provider Configuration Client (#1990)
- [PATCH] Revert 'Write back read successes to cache and stop extra lookups in getAll (#1927)' (#1997)
- [MINOR] Optional support for in-memory cache of all credentials and accountrecords (#1929)
- [MINOR] Changes to support MSA accounts in Broker (#2003)

V.10.1.1
----------
- [PATCH] V10.1.0 was incorrectly built with RC versions, need to increment to V10.1.1
- [MINOR] Add dialogs to prompt user to remove smartcard within CBA flow (#1966)
- [PATCH] Minor fixes to stop NFC discovery upon cancellation of some dialogs (#1972)
- [PATCH] Add metric to measure network check success, failure counts (#1962)
- [MINOR] Add flighting capability for common (#1961)
- [MINOR] Add preferred browser support (#1957)
- [PATCH] Use android.net.NetworkCapabilities to check internet connectivity (#1887)
- [MINOR] Adding new methods in IAccountCredentialAdapter (#1954)
- [MINOR] Add a Basic Encryptor Interface + Add support to Encrypt / Decrypt using AES GCM (#1953)
- [MINOR] Setting sub error codes to UiRequiredException for MsalUiRequiredException (#1944)
- [MINOR] Wrap Runnable with Current Telemetry Context (#1956)
- [MINOR] Update JweResponse APIs and added Additional Authenticated Data (AAD) (#1958)