@@ -1,6 +1,7 @@
 V.NEXT
 ----------
 - [PATCH] Fix Error Type thrown for NO_ACCOUNT_FOUND (#2006)
+- [PATCH] Pulling device cert issuer check to beginning of OnReceivedClientCertRequest (#2010)
 
 V.11.0.0
 ----------
